@@ -51,4 +51,7 @@
 
 0.0.5:
 
-* Fixed a bug in pretor-query where forensic_* fields would always be empty.
+* Fixed a bug in pretor-query where forensic_* fields would always be empty
+
+* Fixed a bug in pretor-query where the database would be written to a file
+  on disk named "memory", rather than stored in memory
